@@ -1,9 +1,10 @@
 - fixed IOC-338 - SerializationException thrown when using remoting within default lifetime scope (Failed to load expression host assembly. Details: Type '[...]CallContextLifetimeScope[...]' is not marked as serializable.)
 - fixed IOC-336 - Failing resolution of proxied components implementing multiple generic service interfaces
-- fixed IOC-331 - TypedFactoryFacility should ignore Func<string> 
+- fixed IOC-332 - UsingFactoryMethod resolving a proxy without a target throws NullReferenceException instead of a better exception
+- fixed IOC-331 - TypedFactoryFacility should ignore Func<string>
 - fixed IOC-328 - Hard-to-understand comment
 - fixed IOC-325 - ParentHandlerWithChildResolver.TryResolve throws exception
-- fixed IOC-241 - .NET 4 security transparency and APTCA 
+- fixed IOC-241 - .NET 4 security transparency and APTCA
 
 3.0.0 (2011-12-13)
 ==================
